tenants/opa-policy.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sprivileged
spec:
  crd:
    spec:
      names:
        kind: K8sPrivileged
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8scontainerprivileged
        violation[{"msg": msg}] {
          c := input.review.object.spec.containers[_]
          c.securityContext.privileged
          msg := "Privileged containers are not allowed!"
        }
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPrivileged
metadata:
  name: deny-privileged-containers
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
